tests/errors/syn8.kt
//missing fun
calculateSum(a: Int, b: Int): Int { // Missing `fun` keyword
    return a + b
}